[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/scripts/handoids/handoidsgame.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/exit_normal.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/exit_focus.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/start_focus.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/start_normal.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/pixel.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 6 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/pixel.ttf"

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/fonts/pixel.ttf"

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = SubResource( 4 )

[node name="HandoidsGame" type="Node2D"]
script = ExtResource( 1 )

[node name="HUD" type="Control" parent="."]
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -68.5
margin_right = 37.0
margin_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.145098 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="HUD"]
margin_top = 141.0
margin_right = 258.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 3 )
text = "Game over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Node2D" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
margin_right = 400.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu/MarginContainer"]
margin_right = 400.0
margin_bottom = 100.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/MarginContainer/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -117.0
margin_top = 57.9405
margin_right = 121.0
margin_bottom = 109.941
custom_fonts/font = SubResource( 5 )
text = "Handoids"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -34.0
margin_right = 80.0
margin_bottom = 34.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="Menu/MarginContainer/ColorRect/VBoxContainer" groups=[
"Buttons",
]]
margin_right = 160.0
margin_bottom = 32.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 4 )

[node name="ExitButton" type="TextureButton" parent="Menu/MarginContainer/ColorRect/VBoxContainer" groups=[
"Buttons",
]]
margin_top = 36.0
margin_right = 160.0
margin_bottom = 68.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 3 )
